--- a/barashka.html
+++ b/barashka.html
@@ -4,7 +4,7 @@
        <title>Page Title </title>
 </head>
 <body>
-barashka
+Краткая биография Гоголя Н.В. — самое главное и важное. Родился 1 апреля 1809 года в Сорочинцах, Полтавская губерния, Российская империя. Фамилия при рождении — Яновский. Отец — Василий Афанасьевич Яновский, поэт. Мать — Мария Ивановна (1791—1868). С 1821 по 1828 года учился в гимназии высших наук в Нежине. В 1828 году переехал в Санкт-Петербург. В 1836 году уехал за границу.888888888888888888888888888888888888888888888
 barashka
 barashka
 </body>
